# GovUK-MCP

./: .env.example  .gitignore  README.md  coverage.json  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: test.yml
gov_uk_mcp/: __init__.py  rate_limiter.py  registry.py  server.py  tool_definitions.py  validation.py
gov_uk_mcp/tools/: __init__.py  air_quality.py  bank_holidays.py  charity.py  companies_house.py  courts.py  cqc.py  epc.py  flood_warnings.py  food_hygiene.py  hansard.py  legislation.py  mps.py  nhs.py  parliamentary_questions.py  police_crime.py  postcode.py  schools.py  search.py  transport.py  voting.py
tests/: README.md  __init__.py  conftest.py  mock_mcp.py  test_companies_house.py  test_mot.py  test_postcode.py  test_rate_limiter.py  test_registry.py  test_validation.py
widgets/: package-lock.json  package.json  vite.config.ts
widgets/src/: types.ts
widgets/src/components/: styles.css
widgets/src/widgets/company-info/: CompanyInfo.tsx  index.html  main.tsx
widgets/src/widgets/flood-warnings/: FloodWarnings.tsx  index.html  main.tsx
widgets/src/widgets/food-hygiene/: FoodHygiene.tsx  index.html  main.tsx
widgets/src/widgets/mp-info/: MPInfo.tsx  index.html  main.tsx
widgets/src/widgets/postcode-lookup/: PostcodeLookup.tsx  index.html  main.tsx
widgets/src/widgets/tube-status/: TubeStatus.tsx  index.html  main.tsx
